[project]
name = "yt-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.2",
    "django>=5.2.1",
    "django-celery-beat>=2.8.0",
    "google-api-python-client>=2.169.0",
    "python-dotenv>=1.1.0",
    "redis>=6.0.0",
    "requests>=2.32.3",
]
